k8s/dvr/overlays/overseerr/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  template:
    spec:
      containers:
        - name: app
          ports:
            - name: http
              containerPort: 5055
          volumeMounts:
            - name: config
              mountPath: /config
              subPath: overseerr
