k8s/dvr/overlays/overseerr/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: http
      port: 5055
      protocol: TCP
      targetPort: http
